--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "nodemailer": "^6.10.1",
+    "stripe": "^18.0.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
