--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.9.2",
     "nodemailer": "^6.10.1",
     "stripe": "^18.0.0",
